// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test adding custom config 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aArtifactHashAC75D432": Object {
      "Description": "Artifact hash for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745": Object {
      "Description": "S3 bucket for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713": Object {
      "Description": "S3 key for asset version \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcArtifactHash82D090E1": Object {
      "Description": "Artifact hash for asset \\"954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfc\\"",
      "Type": "String",
    },
    "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcS3Bucket4D462C07": Object {
      "Description": "S3 bucket for asset \\"954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfc\\"",
      "Type": "String",
    },
    "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcS3VersionKeyE9A1CDA2": Object {
      "Description": "S3 key for asset version \\"954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfc\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "TestConfigDFE7B72C": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcS3Bucket4D462C07",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcS3VersionKeyE9A1CDA2",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcS3VersionKeyE9A1CDA2",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "TestConfigPythonLibLayer672F8799": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
  },
}
`;

exports[`visting node lambda runtimes and adding aspects 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters37f7dfc65b1e0f8e667abd611e22ed736656e76d1fcb841373b98c28a63fead8ArtifactHashFDFD8F01": Object {
      "Description": "Artifact hash for asset \\"37f7dfc65b1e0f8e667abd611e22ed736656e76d1fcb841373b98c28a63fead8\\"",
      "Type": "String",
    },
    "AssetParameters37f7dfc65b1e0f8e667abd611e22ed736656e76d1fcb841373b98c28a63fead8S3BucketA102F591": Object {
      "Description": "S3 bucket for asset \\"37f7dfc65b1e0f8e667abd611e22ed736656e76d1fcb841373b98c28a63fead8\\"",
      "Type": "String",
    },
    "AssetParameters37f7dfc65b1e0f8e667abd611e22ed736656e76d1fcb841373b98c28a63fead8S3VersionKeyF92134AC": Object {
      "Description": "S3 key for asset version \\"37f7dfc65b1e0f8e667abd611e22ed736656e76d1fcb841373b98c28a63fead8\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aArtifactHashAC75D432": Object {
      "Description": "Artifact hash for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745": Object {
      "Description": "S3 bucket for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713": Object {
      "Description": "S3 key for asset version \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcArtifactHash82D090E1": Object {
      "Description": "Artifact hash for asset \\"954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfc\\"",
      "Type": "String",
    },
    "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcS3Bucket4D462C07": Object {
      "Description": "S3 bucket for asset \\"954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfc\\"",
      "Type": "String",
    },
    "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcS3VersionKeyE9A1CDA2": Object {
      "Description": "S3 key for asset version \\"954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfc\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "testConfigWithNodeDDA76C99": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcS3Bucket4D462C07",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcS3VersionKeyE9A1CDA2",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcS3VersionKeyE9A1CDA2",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": Object {
      "DependsOn": Array [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters37f7dfc65b1e0f8e667abd611e22ed736656e76d1fcb841373b98c28a63fead8S3BucketA102F591",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters37f7dfc65b1e0f8e667abd611e22ed736656e76d1fcb841373b98c28a63fead8S3VersionKeyF92134AC",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters37f7dfc65b1e0f8e667abd611e22ed736656e76d1fcb841373b98c28a63fead8S3VersionKeyF92134AC",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_SDK_USER_AGENT": "{ \\"customUserAgent\\": \\"AwsSolution/undefined/undefined\\" }",
          },
        },
        "Handler": "index.handler",
        "Layers": Array [
          Object {
            "Ref": "testConfigWithNodeDDA76C99",
          },
        ],
        "Role": Object {
          "Fn::GetAtt": Array [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`visting node python runtimes and adding aspects 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aArtifactHashAC75D432": Object {
      "Description": "Artifact hash for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745": Object {
      "Description": "S3 bucket for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713": Object {
      "Description": "S3 key for asset version \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcArtifactHash82D090E1": Object {
      "Description": "Artifact hash for asset \\"954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfc\\"",
      "Type": "String",
    },
    "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcS3Bucket4D462C07": Object {
      "Description": "S3 bucket for asset \\"954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfc\\"",
      "Type": "String",
    },
    "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcS3VersionKeyE9A1CDA2": Object {
      "Description": "S3 key for asset version \\"954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfc\\"",
      "Type": "String",
    },
    "AssetParametersd0963e8e82d5ce44a17617cea6897904256f786b63be23520ebdf0566a7b9a41ArtifactHashA50981DB": Object {
      "Description": "Artifact hash for asset \\"d0963e8e82d5ce44a17617cea6897904256f786b63be23520ebdf0566a7b9a41\\"",
      "Type": "String",
    },
    "AssetParametersd0963e8e82d5ce44a17617cea6897904256f786b63be23520ebdf0566a7b9a41S3BucketA4CBB0CF": Object {
      "Description": "S3 bucket for asset \\"d0963e8e82d5ce44a17617cea6897904256f786b63be23520ebdf0566a7b9a41\\"",
      "Type": "String",
    },
    "AssetParametersd0963e8e82d5ce44a17617cea6897904256f786b63be23520ebdf0566a7b9a41S3VersionKeyA0F677FA": Object {
      "Description": "S3 key for asset version \\"d0963e8e82d5ce44a17617cea6897904256f786b63be23520ebdf0566a7b9a41\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "testConfigWithNodeDDA76C99": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcS3Bucket4D462C07",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcS3VersionKeyE9A1CDA2",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters954e446c6f810466c36f675e7a4b87b8f2f9eb933139b44c9bb60d6893595bfcS3VersionKeyE9A1CDA2",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": Object {
      "DependsOn": Array [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersd0963e8e82d5ce44a17617cea6897904256f786b63be23520ebdf0566a7b9a41S3BucketA4CBB0CF",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd0963e8e82d5ce44a17617cea6897904256f786b63be23520ebdf0566a7b9a41S3VersionKeyA0F677FA",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd0963e8e82d5ce44a17617cea6897904256f786b63be23520ebdf0566a7b9a41S3VersionKeyA0F677FA",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_SDK_USER_AGENT": "{ \\"user_agent_extra\\": \\"AwsSolution/undefined/undefined\\" }",
          },
        },
        "Handler": "handler",
        "Layers": Array [
          Object {
            "Ref": "testConfigWithNodePythonLibLayer75C81C17",
          },
        ],
        "Role": Object {
          "Fn::GetAtt": Array [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
